--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,6 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cupiditate quos inventore illo laudantium quis excepturi nam voluptatem magnam nesciunt odio, ab iste possimus quo cumque minus earum nulla dicta!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex dolores iusto iste minima nostrum sit ducimus ut magni, veritatis fuga nisi repellendus odit consequatur laboriosam officiis sunt quisquam itaque recusandae.</p>
     <p>Esse paragrafo foi adicionado dentro do GitHub Desktop para LINUX! &lt;3</p>
+    <p>teste</p>
 </body>
 </html>
